test/grammar/syntax/tab/tab_error_0/stderr.golden
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:3:2
  |
3 | 	age: int
  | ^ inconsistent use of tabs and spaces in indentation
  |